--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
